// FixGuide ERD v3 — API 명세서 v1.0 (REQ-F-0001) 기준
// 7장 DB 매핑을 그대로 전개. 은 명세에 없지만 넣기를 권하는 항목 — 팀 확인 후 결정.
// PK: UUID v4 (명세 1장 ID 포맷). 자연키(email, request_no, (run_id, agent_code))는 UNIQUE.
// 컬럼·타입·NOT NULL·UNIQUE·FK 는 엔티티(com.skala.fixguide.**.entity) 기준으로 대조함 (2026-09-04, schema_postgres.sql 참고).
// default 값·인덱스(unique 제외)·enum 타입·jsonb 는 목표 스키마 표기. 현재 코드는 default 를 애플리케이션(JPA Auditing·빌더)이 채우고,
// enum 은 varchar(@Enumerated STRING) + check, json 은 text + JsonMapConverter 로 저장한다.

Project fixguide {
  database_type: 'PostgreSQL'
}

// ───────── 계정 (API 1·2·3)
Table users {
  id            uuid         [pk, default: `gen_random_uuid()`]
  name          varchar(20)  [not null, note: '2~20자']
  email         varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  role          user_role    [not null]
  created_at    timestamptz  [not null, default: `now()`]
  updated_at    timestamptz  [not null, default: `now()`]
}

Enum user_role {
  ENGINEER
  SAFETY_MANAGER
}

// ───────── 요청 (API 5·6·7·8·14)
Table work_requests {
  id                  uuid                [pk, default: `gen_random_uuid()`]
  request_no          varchar(20)         [unique, note: '업무 번호 WR-YYYYMMDD-NNN. 화면 표시·검색용 자연키. 서버가 항상 채번하지만 코드 컬럼은 nullable (기존 행 호환) — NOT NULL 은 서비스 보장']
  requester_id        uuid                [not null, ref: > users.id]
  equipment           varchar(100)        [note: '설비. draft=false 시 필수']
  line                varchar(100)        [note: '라인. draft=false 시 필수']
  substance           varchar(100)        [note: '취급 물질']
  operating_condition jsonb               [note: '{ "temperature": "80 ℃", "pressure": "2500 psi" }']
  product_name        varchar(200)        [note: 'AI 전송 핵심 값']
  product_type        product_type        [note: 'VALVE | FITTING_TUBE | REGULATOR | FILTER | ETC']
  spec_json           jsonb               [note: 'product_type별 필수 키 검증 (SPEC_SCHEMA_MISMATCH)']
  symptom             text
  site_memo           text
  engineer_note       text                [note: 'E_04 설명. submit 시 필수 (422)']
  status              work_request_status [not null, default: 'DRAFT']
  created_at          timestamptz         [not null, default: `now()`]
  updated_at          timestamptz         [not null, default: `now()`]
  submitted_at        timestamptz         [note: 'PENDING 전환 시각. 재제출 시 갱신']

  indexes {
    (requester_id, status) [note: '권장 — 코드(JPA) 미생성']
    (status, submitted_at) [note: '권장 — 코드(JPA) 미생성']
  }
  note: 'draft=true 로 생성되면 필수 컬럼도 NULL 허용 → NOT NULL 대신 서비스 검증'
}

Enum work_request_status {
  DRAFT       [note: '작성 중']
  AI_RUNNING  [note: 'AI 검증중 (E_03)']
  AI_DONE     [note: '결과 확인 대기 (E_04) — 명세 정합성 메모 #2 신설']
  PENDING     [note: '승인 대기']
  APPROVED
  REJECTED    [note: '거절·보완 → 재제출 시 PENDING']
}

Enum product_type {
  VALVE
  FITTING_TUBE
  REGULATOR
  FILTER
  ETC
}

// ───────── 제품 사진 (API 9·10)
Table work_request_photos {
  id              uuid         [pk, default: `gen_random_uuid()`]
  work_request_id uuid         [not null, ref: > work_requests.id]
  file_name       varchar(255) [not null]
  storage_key     varchar(500) [not null, note: '원본 경로. EXIF 제거 후 저장']
  thumbnail_key   varchar(500) [not null, note: '320px 썸네일']
  size            int          [not null, note: 'bytes. 10MB 제한']
  uploaded_at     timestamptz  [not null, default: `now()`]
  note: '요청당 최대 5장 (PHOTO_LIMIT_EXCEEDED) — 서비스 검증'
}

// ───────── AI 실행 (API 11·12)
Table agent_runs {
  id              uuid        [pk, default: `gen_random_uuid()`]
  work_request_id uuid        [not null, ref: > work_requests.id]
  status          run_status  [not null, default: 'RUNNING']
  started_at      timestamptz [not null, default: `now()`]
  finished_at     timestamptz [note: '3 step 모두 DONE/FAILED 시']
  // 아래 3개 — 재현·감사용. 없어도 명세 동작엔 영향 없음
  input_snapshot  jsonb       [note: '실행 시점 요청 전체 컨텍스트 (명세 5.11 "서버가 스냅샷 구성")']
  ai_config_id    uuid        [ref: > ai_configs.id, note: '어떤 설정으로 돌았는지']
  created_at      timestamptz [not null, default: `now()`]
  updated_at      timestamptz [not null, default: `now()`]

  indexes {
    (work_request_id, started_at) [note: '권장 — 코드(JPA) 미생성']
  }
  note: '동일 요청에 RUNNING run 이 있으면 409 RUN_ALREADY_IN_PROGRESS. 재실행 시 새 row (1:N)'
}

Enum run_status {
  RUNNING
  DONE
  FAILED
}

Table agent_steps {
  id            uuid              [pk, default: `gen_random_uuid()`]
  run_id        uuid              [not null, ref: > agent_runs.id]
  agent_code    agent_code        [not null]
  status        agent_step_status [not null, default: 'WAITING']
  message       varchar(200)      [note: '진행 메시지 (E_03 카드 표시)']
  error_message text              [note: 'FAILED 시']
  started_at    timestamptz
  finished_at   timestamptz

  indexes {
    (run_id, agent_code) [unique]
  }
}

Enum agent_code {
  A1 [note: '규격·호환']
  A2 [note: '법령·조문']
  A3 [note: '안전서류']
}

Enum agent_step_status {
  WAITING
  RUNNING
  DONE
  FAILED
}

// ───────── AI 결과 + 엔지니어 수정 (API 7·12·13)
Table agent_results {
  id            uuid        [pk, default: `gen_random_uuid()`]
  run_id        uuid        [not null, ref: > agent_runs.id]
  agent_code    agent_code  [not null]
  payload_json  jsonb       [not null, note: 'A1·A2: { items:[{itemId,text,edited}] } / A3: { documents:[{docId,type,name,content,edited}] }']
  edited        boolean     [not null, default: false, note: '항목 중 하나라도 수정되면 true']
  original_json jsonb       [note: 'AI 원본 스냅샷. payload_json 은 수정본. 감사 시 diff 근거']
  created_at    timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]

  indexes {
    (run_id, agent_code) [unique]
  }
  note: 'PATCH /agent-results/{id} 는 items/documents 전체 치환. PENDING·APPROVED 에서 409 RESULT_LOCKED'
}

// ───────── 승인 (API 15·7)
Table approvals {
  id              uuid              [pk, default: `gen_random_uuid()`]
  work_request_id uuid              [not null, ref: > work_requests.id]
  approver_id     uuid              [not null, ref: > users.id]
  decision        approval_decision [not null]
  reason          text              [note: 'REJECT 시 필수, 10자 이상. E_05 에 그대로 전달']
  reason_category varchar(50)       [note: '거절 사유 TOP5 집계 키. enum 고정 여부는 정합성 메모 #6']
  decided_at      timestamptz       [not null, default: `now()`]

  indexes {
    (work_request_id, decided_at) [note: '권장 — 코드(JPA) 미생성']
    (decided_at) [note: '권장 — 코드(JPA) 미생성']
  }
  note: 'append-only 다건 (정합성 메모 #8). 상세 응답 approval 은 최신 1건'
}

Enum approval_decision {
  APPROVE
  REJECT
}

// ───────── AI-Ready 설정 — 명세 7장엔 없음. 루브릭 "Security & Config Isolation" 대응
Table ai_configs {
  id             uuid        [pk, default: `gen_random_uuid()`]
  agent_code     agent_code  [not null]
  provider       varchar(20) [not null, note: 'MOCK | LOCAL_LLM | OPENAI']
  model_name     varchar(60)
  prompt_version varchar(30)
  temperature    numeric(3,2)
  max_tokens     int
  egress_allowed boolean     [not null, default: false]
  is_active      boolean     [not null, default: true]
  created_at     timestamptz [not null, default: `now()`]
  updated_at     timestamptz [not null, default: `now()`]

  indexes {
    (agent_code) [unique, note: 'WHERE is_active = true (부분 유니크) — 목표 스키마. 코드에는 없고 시드 1회 삽입·서비스 검증으로 보장']
  }
  note: 'API 키는 넣지 않음 (.env)'
}
